--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -106,7 +106,10 @@ h3 {
 	vertical-align:middle;
 }
 
-
+.label-selects {
+	margin: 0.4em 0.2ex;
+	display: inline-block;
+}
 
 //wizard
 .wizard {
@@ -337,7 +340,6 @@ h3 {
 		background:transparent none;
 	}
 }
-
 
 
 .website-block-wrapper {
