--- a/app/views/parts/publisheredit.scala.html
+++ b/app/views/parts/publisheredit.scala.html
@@ -19,6 +19,17 @@
 								<div class="popover-title"><span class="glyphicon glyphicon-exclamation-sign"></span><span> </span><span class="help-block"></span></div>
 							</div>
 						</div>
+						<div class="form-group control-group">
+							<div class="col-sm-3 control-label">Admins</div>
+							<div class="col-sm-9">
+								<!-- ko foreach: admins -->
+								<div class="label-selects label label-success">
+									<a class="glyphicon glyphicon-remove" data-bind="click: $root.deladmin"></a>
+									<span data-bind="text: name"></span>
+								</div>
+								<!-- /ko -->
+							</div>
+						</div>
 						<div class="form-group">
 							<div class="col-sm-offset-3 col-sm-9">
 								<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-floppy-disk"></span> Save Publisher</button>
