add tour plugin

--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" media="screen" href="@routes.MainController.minProdWebJarAssetsAt("css/bootstrap-editable.css")">
 	<link rel="stylesheet" media="screen" href="@routes.MainController.minProdWebJarAssetsAt("nv.d3.css")" >
 	<link rel="stylesheet" media="screen" href="@routes.MainController.minProdWebJarAssetsAt("css/jquery.fileupload-ui.css")" >
+	<link rel="stylesheet" media="screen" href="@routes.RemoteAssets.at("stylesheets/bootstrap-tour.css")">
+	<link rel="stylesheet" media="screen" href="@routes.RemoteAssets.at("stylesheets/chardinjs.css")">
 	<link rel="stylesheet" media="screen" href="@routes.RemoteAssets.at("stylesheets/main.css")">
 	<link rel="shortcut icon" href="@routes.RemoteAssets.at("images/favicon.ico")">
 </head>
