--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -26,22 +26,22 @@
 				<div class="col-sm-4 hidden-xs">
 					<form class="form-horizontal" role="form">
 						<div class="form-group well-fix">
-							<label for="selectDate" class="col-sm-2 control-label">Dates</label>
-							<div class="col-sm-10">
+							<label for="selectDate" class="col-sm-3 control-label">Dates</label>
+							<div class="col-sm-9">
 								<select class="form-control" data-bind="options: audiencechartdaterange.availableDateRanges, value: audiencechartdaterange.dateRange" id="selectDate">
 								</select>
 							</div>
 						</div>
 					</form>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-lg-6 col-sm-5">
 					<div data-bind="datepicker: audiencechartdaterange, datepickerOptions: { calendarWeeks: true, autoclose: true, todayHighlight: true }" class="well well-sm m-null input-daterange">
 						<div class="row">
 							<div class="col-sm-6">
 								<form class="form-horizontal" role="form">
 									<div class="form-group m-null">
-										<label for="selectDateFrom" class="col-sm-2 control-label hidden-md hidden-sm">From</label>
-										<div class="col-sm-10">
+										<label for="selectDateFrom" class="col-lg-3 control-label hidden-md hidden-sm">From</label>
+										<div class="col-lg-9 col-md-12">
 											<input class="form-control date-picker" id="selectDateFrom" name="start"/>
 										</div>
 									</div>
@@ -50,8 +50,8 @@
 							<div class="col-sm-6">
 								<form class="form-horizontal" role="form">
 									<div class="form-group m-null">
-										<label for="selectDateTo" class="col-sm-2 control-label hidden-md hidden-sm">To</label>
-										<div class="col-sm-10">
+										<label for="selectDateTo" class="col-lg-3 control-label hidden-md hidden-sm">To</label>
+										<div class="col-lg-9 col-md-12">
 											<input class="form-control date-picker" id="selectDateTo" name="end"/>
 										</div>
 									</div>
@@ -60,8 +60,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-2 hidden-xs">
-					<div class="btn-group" data-toggle="buttons">
+				<div class="col-lg-2 col-sm-3 hidden-xs">
+					<div class="btn-group well-fix" data-toggle="buttons">
 						<label class="btn btn-default active btn-sm">
 							<input type="radio" name="charttype" value="multibar" data-bind="checkedChange: audiencecharttype">Bar
 						</label>
@@ -91,7 +91,7 @@
 <div class="secondary">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-9">
+			<div class="col-lg-9 col-md-8">
 				<div class="row">
 					@elements.searchbar("audiencetablesearchbar")
 				</div>
@@ -120,7 +120,7 @@
 					@elements.pagination("audiencetablescroller")
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-lg-3 col-md-4">
 				<p>
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newaudience"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
 				</p>
