--- a/app/views/parts/campaignedit.scala.html
+++ b/app/views/parts/campaignedit.scala.html
@@ -46,7 +46,7 @@
 						<h3>Select Package</h3>
 						<div class="box-strips">
 							<div class="clearfix">
-								<div class="website-block-wrapper">
+								<div class="clearfix website-block-wrapper">
 									<div class="website-block-add-wrapper">
 										<a href="javascript:void(0)" class="website-block-add" data-bind="click: newpackage">
 											<span class="website-name">Add New Package</span>
