--- a/app/views/parts/campaignselect.scala.html
+++ b/app/views/parts/campaignselect.scala.html
@@ -2,6 +2,36 @@
 <div class="modal fade" id="selectCampaign" tabindex="-1" role="dialog" aria-labelledby="selectCampaign" aria-hidden="true" data-keyboard="false" data-backdrop="static">
 	<div class="modal-dialog">
 		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" aria-hidden="true" data-bind="click: clearcampaign">&times;</button>
+				<h4 class="modal-title">New Campaign</h4>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+						<p class="lead">Please select one of... bla bla bla...</p>
+						<div class="well">
+							<div class="row">
+								<div class="col-sm-5">
+									<div class="text-center">
+										<p class="img-option-name">Option Name 1</p>
+										<a href="#1" class="img-option option1"><img alt="" width="200" height="200" src="@routes.RemoteAssets.at("images/placeholder_200x200.png")" /></a>
+									</div>
+								</div>
+								<div class="col-sm-2">
+									<p class="img-option-text">OR</p>
+								</div>
+								<div class="col-sm-5">
+									<div class="text-center">
+										<p class="img-option-name">Option Name 2</p>
+										<a href="#1" class="img-option option2"><img alt="" width="200" height="200" src="@routes.RemoteAssets.at("images/placeholder_200x200.png")" /></a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
