--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -144,7 +144,7 @@
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newcampaign"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: startnewcampaign"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: startnewcampaign"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Start New Campaign</button>
 				</p>
 				<p>
 					<button type="button" disabled="true" class="btn btn-lg btn-block btn-plus" data-bind="click: showyieldmaximizer"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser <span class="label label-info">soon</span></button>
