--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -34,7 +34,7 @@
 						</div>
 					</form>
 				</div>
-				<div class="col-lg-6 col-sm-5">
+				<div class="col-lg-6 col-sm-5" data-intro="Select date range for chart, use same day for hourly chart" data-position="left">
 					<div data-bind="datepicker: audiencechartdaterange, datepickerOptions: { calendarWeeks: true, autoclose: true, todayHighlight: true }" class="well well-sm m-null input-daterange">
 						<div class="row">
 							<div class="col-sm-6">
@@ -71,7 +71,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row" data-intro="Count of users for your audiences" data-position="right">
 				<div class="col-md-12">
 					<div class="dashboard with-transitions" data-bind="nvddd: audiencechart.chartcontent, nvdddOptions: {chartType: audiencecharttype, yFormat: 'integer', cumulateOther: 7}">
 						<svg></svg>
@@ -98,7 +98,7 @@
 				<div class="row hidden-lg hidden-md">
 					@elements.pagination("audiencetablescroller")
 				</div>
-				<div class="row">
+				<div class="row" data-intro="All available audiences, click on audience row to edit" data-position="right">
 					<div class="col-md-12">
 						<div class="table-responsive">
 							<table class="table table-striped table-bordered data-table" data-bind="datatable: audiencetable, datatableScroller: audiencetablescroller, datatableOptions: { aoColumns: [ { sType: 'string' }, { sType: 'html' }, { sType: 'number' }, { sType: 'number' } ], rowClick: selectaudience }">
@@ -120,7 +120,7 @@
 					@elements.pagination("audiencetablescroller")
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-4">
+			<div class="col-lg-3 col-md-4" data-intro="Create or analyse your audiences" data-position="top">
 				<p>
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newaudience"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
 				</p>
