--- a/app/views/menu/logout.scala.html
+++ b/app/views/menu/logout.scala.html
@@ -1,5 +1,5 @@
 @(current: Admin, options: Html = Html(""))
-<ul class="nav navbar-nav navbar-right">
+<ul class="nav navbar-nav navbar-right" data-intro="Edit your account" data-position="bottom">
 	<li class="dropdown">
 		<a data-toggle="dropdown" class="dropdown-toggle" href="#"><span class="glyphicon glyphicon-user"></span> My Account <b class="caret"></b></a>
 		<ul class="dropdown-menu">
