fix campaign select

--- a/app/views/parts/campaignselect.scala.html
+++ b/app/views/parts/campaignselect.scala.html
@@ -1,11 +1,7 @@
 @(publishers: Seq[Publisher])
-<div class="modal fade" id="selectCampaign" tabindex="-1" role="dialog" aria-labelledby="selectCampaign" aria-hidden="true" data-keyboard="false" data-backdrop="static">
+<div class="modal fade" id="selectCampaign" tabindex="-1" role="dialog" aria-labelledby="selectCampaign" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" aria-hidden="true" data-bind="click: clearcampaign">&times;</button>
-				<h4 class="modal-title">New Campaign</h4>
-			</div>
 			<div class="modal-body">
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
