cleanup knockout bindings

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -341,6 +341,10 @@ h3 {
 	}
 }
 
+.help-activator {
+  margin: 20px;
+  z-index: 100;
+}
 
 .website-block-wrapper {
 	background:rgba(255, 255, 255, 0.5);
@@ -807,6 +811,12 @@ nav.loginbar {
 .dashboard svg {
 	height:300px;
 	margin-top:15px;
+}
+
+.dashboard .nvd3 .nv-groups path.nv-line {
+  stroke-width: 3.5px;
+  stroke-linejoin: round;
+  stroke-opacity: 0.7;
 }
 
 .schedule svg {
