--- a/app/views/dashboardcampaign.scala.html
+++ b/app/views/dashboardcampaign.scala.html
@@ -13,6 +13,7 @@
 }{
 <div class="header">
 	<div class="container">
+		<span class="help-activator glyphicon glyphicon-question-sign pull-right" data-bind="chardin: 'click'"></span>
 		<ul class="nav nav-tabs">
 			<li><a href="@routes.MainController.dashboardSelect("audience")">Audiences</a></li>
 			<li class="active"><a href="#">Campaigns</a></li>
